force-app/main/default/objects/Contract/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Account.Owner_Full_Name__c</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>