force-app/main/default/objects/Contract/fields/Agreement_ID__c.field-meta.xml
<CustomField>
    <fullName>Agreement_ID__c</fullName>
    <externalId>true</externalId>
    <label>Agreement ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>