force-app/main/default/objects/Contract/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VT/SG Agreement</fullName>
            </value>
            <value>
                <fullName>OLP Agreement</fullName>
            </value>
            <value>
                <fullName>Free Trial Agreement</fullName>
            </value>
            <value>
                <fullName>OEM Partnership Agreement</fullName>
            </value>
            <value>
                <fullName>Price Discount Agreement</fullName>
            </value>
            <value>
                <fullName>Volume Discount Agreement</fullName>
            </value>
            <value>
                <fullName>ln-house Agreement</fullName>
            </value>
            <value>
                <fullName>Distribution Agreement</fullName>
            </value>
            <value>
                <fullName>V Group OLP</fullName>
            </value>
            <value>
                <fullName>MTS Agreement</fullName>
            </value>
            <value>
                <fullName>Wartsila OLP Agreement</fullName>
            </value>
            <value>
                <fullName>End of Life DVD Agreement</fullName>
            </value>
            <value>
                <fullName>TM Master Agreement</fullName>
            </value>
            <value>
                <fullName>Compas Agreement</fullName>
            </value>
            <value>
                <fullName>L&amp;A Content Only Agreement</fullName>
            </value>
            <value>
                <fullName>Content Only Agreement</fullName>
                <isActive>false</isActive>
                <label>Content Only Agreement</label>
            </value>
            <value>
                <fullName>MACN OLP</fullName>
                <isActive>false</isActive>
                <label>MACN OLP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>