force-app/main/default/objects/Contract/fields/Annual_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Annual_Uplift__c</fullName>
    <label>Sportal Uplift %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>