force-app/main/default/objects/Contract/fields/Authorised_Certification_Contact__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Certification_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorised Certification Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>