force-app/main/default/objects/Contract/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCM Crew</fullName>
            </value>
            <value>
                <fullName>HCM Learning, Assessment and Competency</fullName>
            </value>
            <value>
                <fullName>Technical Ship Management</fullName>
            </value>
            <value>
                <fullName>Governance, Risk &amp; Compliance</fullName>
            </value>
            <value>
                <fullName>Cloud Fleet Manager</fullName>
            </value>
            <value>
                <fullName>Voyage Performance &amp; Optimization</fullName>
            </value>
            <value>
                <fullName>Voyage Management</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Crew</fullName>
                <isActive>false</isActive>
                <label>Crew</label>
            </value>
            <value>
                <fullName>Fleet</fullName>
                <isActive>false</isActive>
                <label>Fleet</label>
            </value>
            <value>
                <fullName>Learning &amp; Assessment</fullName>
                <isActive>false</isActive>
                <label>Learning &amp; Assessment</label>
            </value>
            <value>
                <fullName>Marine Regulations</fullName>
                <isActive>false</isActive>
                <label>Marine Regulations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>