force-app/main/default/objects/Contract/fields/CancelationPeriod__c.field-meta.xml
<CustomField>
    <fullName>CancelationPeriod__c</fullName>
    <label>CancelationPeriod</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>