force-app/main/default/objects/Contract/fields/Contract_Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Activated_Date__c</fullName>
    <inlineHelpText>This is date the agreement status turned from “Draft” to “Activated</inlineHelpText>
    <label>Contract Activated Date</label>
    <type>Date</type>
</CustomField>