force-app/main/default/objects/Contract/fields/Contract_Flow_Label__c.field-meta.xml
<CustomField>
    <fullName>Contract_Flow_Label__c</fullName>
    <formula>ContractNumber &amp; &apos; | &apos; + TEXT(Agreement_Type__c) &amp; &apos; | &apos; &amp; TEXT(Business_Unit__c)</formula>
    <label>Contract Flow Label</label>
    <type>Text</type>
</CustomField>