force-app/main/default/objects/Contract/fields/Contract_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Contract_Legal_Entity__c</fullName>
    <label>Contract Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marlin-Vgroup</fullName>
            </value>
            <value>
                <fullName>MTS</fullName>
            </value>
            <value>
                <fullName>OLP</fullName>
            </value>
            <value>
                <fullName>Seagull</fullName>
            </value>
            <value>
                <fullName>Videotel</fullName>
            </value>
            <value>
                <fullName>Maritime Training Services Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Ocean Tech Asia Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Ocean Technologies Group Crew AS</fullName>
            </value>
            <value>
                <fullName>Ocean Technologies Group Norway AS</fullName>
            </value>
            <value>
                <fullName>Ocean Technologies Group Romania SRL</fullName>
            </value>
            <value>
                <fullName>Ocean Technologies Group USA Inc</fullName>
            </value>
            <value>
                <fullName>Ocean TG Norway AS</fullName>
            </value>
            <value>
                <fullName>Ocean TG Singapore Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Ocean TG UK Ltd</fullName>
            </value>
            <value>
                <fullName>Tero Marine UK Limited</fullName>
            </value>
            <value>
                <fullName>Videotel Marine Asia Ltd</fullName>
            </value>
            <value>
                <fullName>DanDocs ApS</fullName>
            </value>
            <value>
                <fullName>Docmap</fullName>
            </value>
            <value>
                <fullName>Hanseaticsoft GmbH</fullName>
            </value>
            <value>
                <fullName>OneOcean (Canada) Inc</fullName>
            </value>
            <value>
                <fullName>OneOcean (Nederland) BV</fullName>
            </value>
            <value>
                <fullName>OneOcean Group Limited</fullName>
            </value>
            <value>
                <fullName>OneOcean Maritime Solutions Pte Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>