force-app/main/default/objects/Contract/fields/CPI_Month__c.field-meta.xml
<CustomField>
    <fullName>CPI_Month__c</fullName>
    <formula>CASE(
MONTH( Next_Renewal_Date__c ),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;&quot;
) &amp; &quot;-&quot; &amp; TEXT(YEAR(Next_Renewal_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPI Month</label>
    <type>Text</type>
</CustomField>