force-app/main/default/objects/Contract/fields/CPI_Uplift__c.field-meta.xml
<CustomField>
    <fullName>CPI_Uplift__c</fullName>
    <label>CPI Uplift %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>