force-app/main/default/objects/Contract/fields/Current_Products__c.field-meta.xml
<CustomField>
    <fullName>Current_Products__c</fullName>
    <label>Current Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>