force-app/main/default/objects/Contract/fields/Days_to_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Renewal__c</fullName>
    <formula>Next_Renewal_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>