force-app/main/default/objects/Contract/fields/Default_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Default_Delivery_Method__c</fullName>
    <label>Default Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USB</fullName>
                <default>true</default>
                <label>USB</label>
            </value>
            <value>
                <fullName>Download Link generated by OTG</fullName>
            </value>
            <value>
                <fullName>Self Service Download</fullName>
            </value>
            <value>
                <fullName>Marlink</fullName>
            </value>
            <value>
                <fullName>Ship</fullName>
            </value>
            <value>
                <fullName>Download</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>