force-app/main/default/objects/Contract/fields/Fleet_Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Subscription_Type__c</fullName>
    <label>Fleet Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>LSMA</fullName>
            </value>
            <value>
                <fullName>Mix (Sub &amp; LMSA)</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>