force-app/main/default/objects/Contract/fields/In_Legal_Dispute__c.field-meta.xml
<CustomField>
    <fullName>In_Legal_Dispute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Legal Dispute?</label>
    <type>Checkbox</type>
</CustomField>