force-app/main/default/objects/Contract/fields/Installation_ARPI__c.field-meta.xml
<CustomField>
    <fullName>Installation_ARPI__c</fullName>
    <label>Installation ARPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>