force-app/main/default/objects/Contract/fields/Legacy_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Special_Instructions__c</fullName>
    <label>Legacy Special Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>