force-app/main/default/objects/Contract/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Contract Move</fullName>
            </value>
            <value>
                <fullName>Customer now using in-house systems</fullName>
            </value>
            <value>
                <fullName>Did not win tender this year</fullName>
            </value>
            <value>
                <fullName>OTG Product performance issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price too high</fullName>
            </value>
            <value>
                <fullName>Product/Service does not meet Clients needs</fullName>
            </value>
            <value>
                <fullName>Sold all vessels, no longer requires OTGs services</fullName>
            </value>
            <value>
                <fullName>The client has financial difficulties</fullName>
            </value>
            <value>
                <fullName>Unable to commit at this time</fullName>
            </value>
            <value>
                <fullName>Under sanctions</fullName>
            </value>
            <value>
                <fullName>Unhappy with OTG Service</fullName>
            </value>
            <value>
                <fullName>Unknown - Client refused to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>