force-app/main/default/objects/Contract/fields/Lost_Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Comments__c</fullName>
    <label>Lost Reason Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>