force-app/main/default/objects/Contract/fields/Lost_to_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lost to Competitor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please choose the competitor account</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competitors Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>