force-app/main/default/objects/Contract/fields/MACN_Member__c.field-meta.xml
<CustomField>
    <fullName>MACN_Member__c</fullName>
    <formula>IF(TEXT( Account.MACN__c) = &quot;Yes&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MACN Member</label>
    <type>Checkbox</type>
</CustomField>