force-app/main/default/objects/Contract/fields/Managed_By_Agents__c.field-meta.xml
<CustomField>
    <fullName>Managed_By_Agents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed By Agents</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agent Account, Archived  Agent Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Managed By Agents)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>