force-app/main/default/objects/Contract/fields/Manual_Renewal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Manual_Renewal_Comments__c</fullName>
    <label>Manual Renewal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>