force-app/main/default/objects/Contract/fields/Monthly_CPI_Value__c.field-meta.xml
<CustomField>
    <fullName>Monthly_CPI_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly CPI Value</label>
    <referenceTo>Monthly_CPI_Value__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>