force-app/main/default/objects/Contract/fields/Next_Agreement_ID__c.field-meta.xml
<CustomField>
    <fullName>Next_Agreement_ID__c</fullName>
    <formula>Next_Contract__r.Agreement_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Agreement ID</label>
    <type>Text</type>
</CustomField>