force-app/main/default/objects/Contract/fields/Next_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Next_Agreement_Status__c</fullName>
    <formula>TEXT(Next_Contract__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Agreement Status</label>
    <type>Text</type>
</CustomField>