force-app/main/default/objects/Contract/fields/Next_Contract__c.field-meta.xml
<CustomField>
    <fullName>Next_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Previous Contracts</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>