force-app/main/default/objects/Contract/fields/No_Manual_Renewal_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Manual_Renewal_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flag to issue fixed so no longer to be manual renewal</inlineHelpText>
    <label>Do Not Auto Renew</label>
    <type>Checkbox</type>
</CustomField>