force-app/main/default/objects/Contract/fields/No_of_Installations__c.field-meta.xml
<CustomField>
    <fullName>No_of_Installations__c</fullName>
    <label>No of Installations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>