force-app/main/default/objects/Contract/fields/Number_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users__c</fullName>
    <formula>IF(
    ISPICKVAL(  SBQQ__Quote__r.Agreement_Type__c , &quot;Asset Based Installation&quot;),
      SBQQ__Quote__r.Total_Installations__c * 50,
    IF(
        ISPICKVAL(SBQQ__Quote__r.Agreement_Type__c, &quot;Asset Based User&quot;),
         SBQQ__Quote__r.Total_Users__c ,
        SBQQ__Quote__r.Total_Users__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>