force-app/main/default/objects/Contract/fields/OLP_Contract_Certification_Requests__c.field-meta.xml
<CustomField>
    <fullName>OLP_Contract_Certification_Requests__c</fullName>
    <inlineHelpText>Only required for OLP contracts. Required as certification is PAYG and managed outside of the OLP subscription Service. Certification is an independent service to OLP content used to obtain a certification.</inlineHelpText>
    <label>OLP Contract Certification Requests?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>