force-app/main/default/objects/Contract/fields/Original_Fixed_Term__c.field-meta.xml
<CustomField>
    <fullName>Original_Fixed_Term__c</fullName>
    <label>Original Fixed Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>