force-app/main/default/objects/Contract/fields/Original_Fixed_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Fixed_Term_End_Date__c</fullName>
    <label>Original Fixed Term End Date</label>
    <type>Date</type>
</CustomField>