force-app/main/default/objects/Contract/fields/Original_Fixed_Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Fixed_Term_Start_Date__c</fullName>
    <label>Original Fixed Term Start Date</label>
    <type>Date</type>
</CustomField>