force-app/main/default/objects/Contract/fields/Previous_Agreement_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Agreement_ID__c</fullName>
    <formula>Previous_Contract__r.Agreement_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Agreement ID</label>
    <type>Text</type>
</CustomField>