force-app/main/default/objects/Contract/fields/Previous_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Agreement_Status__c</fullName>
    <formula>TEXT(Previous_Contract__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Agreement Status</label>
    <type>Text</type>
</CustomField>