force-app/main/default/objects/Contract/fields/Previous_Contract__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Next Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>