force-app/main/default/objects/Contract/fields/Renewal_Month__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Month__c</fullName>
    <label>Renewal Month</label>
    <length>55</length>
    <type>Text</type>
</CustomField>