force-app/main/default/objects/Contract/fields/Renewal_Uplift_Comments__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Uplift_Comments__c</fullName>
    <inlineHelpText>If there Uplift is removed or changed from the standard a comment must be added on who approved when and why</inlineHelpText>
    <label>Renewal Uplift(%) Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>