force-app/main/default/objects/Contract/fields/Sales_Ops_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Comments__c</fullName>
    <label>Sales Ops Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>