force-app/main/default/objects/Contract/fields/Sales_Orders_Created__c.field-meta.xml
<CustomField>
    <fullName>Sales_Orders_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only for Migrated Contracts</inlineHelpText>
    <label>Sales Orders Created</label>
    <type>Checkbox</type>
</CustomField>