force-app/main/default/objects/Contract/fields/Staged_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Staged_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staged Pricing</label>
    <type>Checkbox</type>
</CustomField>