force-app/main/default/objects/Contract/fields/Staged_Pricing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Staged_Pricing_End_Date__c</fullName>
    <label>Staged Pricing End Date</label>
    <type>Date</type>
</CustomField>