force-app/main/default/objects/Contract/fields/Standard_CPI_Uplift_Process__c.field-meta.xml
<CustomField>
    <fullName>Standard_CPI_Uplift_Process__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Standard CPI Uplift Process</label>
    <type>Checkbox</type>
</CustomField>