force-app/main/default/objects/Contract/fields/Subscription_System__c.field-meta.xml
<CustomField>
    <fullName>Subscription_System__c</fullName>
    <label>Subscription System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sportal</fullName>
            </value>
            <value>
                <fullName>UNA</fullName>
            </value>
            <value>
                <fullName>Compas</fullName>
            </value>
            <value>
                <fullName>Salesforce CPQ</fullName>
            </value>
            <value>
                <fullName>Marine Regulations</fullName>
            </value>
            <value>
                <fullName>Coast</fullName>
            </value>
            <value>
                <fullName>CFM</fullName>
            </value>
            <value>
                <fullName>Watchkeeper Legend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>