force-app/main/default/objects/Contract/fields/Subscription_Value__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Value__c</fullName>
    <label>Subscription Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>