force-app/main/default/objects/Contract/fields/Terminated_Date__c.field-meta.xml
<CustomField>
    <fullName>Terminated_Date__c</fullName>
    <inlineHelpText>This is date the agreement status moved to “Terminated&quot;</inlineHelpText>
    <label>Terminated Date</label>
    <type>Date</type>
</CustomField>