force-app/main/default/objects/Contract/fields/Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Test_Status__c</fullName>
    <label>Test Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>