force-app/main/default/objects/Contract/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <label>Total Contract Value</label>
    <summarizedField>Order.TotalAmount</summarizedField>
    <summaryForeignKey>Order.ContractId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>