force-app/main/default/objects/Contract/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Based Installation</fullName>
            </value>
            <value>
                <fullName>Asset Based User</fullName>
            </value>
            <value>
                <fullName>V Group</fullName>
            </value>
            <value>
                <fullName>Cruise Based User</fullName>
            </value>
            <value>
                <fullName>METI User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>