force-app/main/default/objects/Contract/fields/Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Date__c</fullName>
    <description>Date the record was last refreshed from Qlik</description>
    <inlineHelpText>Date the record was last refreshed from Qlik</inlineHelpText>
    <label>Update Date</label>
    <type>Date</type>
</CustomField>