force-app/main/default/objects/Contract/fields/Uplift_Over_CPI__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Over_CPI__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Uplift Over CPI %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>