force-app/main/default/objects/Contract/fields/Visma_ID__c.field-meta.xml
<CustomField>
    <fullName>Visma_ID__c</fullName>
    <formula>Account.Visma_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visma ID</label>
    <type>Text</type>
</CustomField>