force-app/main/default/objects/Contract/fields/VismaID__c.field-meta.xml
<CustomField>
    <fullName>VismaID__c</fullName>
    <label>Visma ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>