force-app/main/default/objects/Contract/validationRules/Renewal_Uplift.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal_Uplift</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    SBQQ__RenewalForecast__c = TRUE,
    ISBLANK( SBQQ__RenewalUpliftRate__c )
)</errorConditionFormula>
    <errorMessage>Contract has no renewal uplift yet, please populate it before initiating the renewal process.</errorMessage>
</ValidationRule>